--- a/config/database.yml
+++ b/config/database.yml
@@ -15,15 +15,15 @@ default: &default
 
 development:
   <<: *default
-  database: development
+  database: blog/development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test
+  database: blog/test
 
 production:
   <<: *default
-  database: production
+  database: blog/production
